--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 # StoryPortal.github.io
 
-<!DOCTYPE html> 
-<html> 
-    <head> 
-        <title> STORY PORTAL> 
-    </head> 
+<body>
+  <h1>YOUR NAME</h1>
+  <p>STORY PORTALe!</p>
+</body>
+
+</html>
