link added to index.html

--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 
 <body>
   <h1>YOUR NAME</h1>
-  <p>STORY PORTALe!</p>
+  <p>STORY PORTALe!
+
+    <link>https://StoryPortal.github.io/test.html</link>
+  </p>
 </body>
 
 </html>
