--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <h1>YOUR NAME</h1>
   <p>STORY PORTALe!
 
-    <a href="https://StoryPortal.github.io.test.html">Choose this to progress in the story</a>
+    <a href="https://StoryPortal.github.io/test.html">Choose this to progress in the story</a>
   </p>
 </body>
 
