add css file and reference to it in index

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 # StoryPortal.github.io
-
+<link rel="stylesheet" type="text/css" href="style.css">
 <body>
   <h1>style="text-align:center;">YOUR NAME</h1>
   <p>style="text-align:center;">STORY PORTALe!
