--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 # StoryPortal.github.io
 <link rel="stylesheet" type="text/css" href="style.css">
 <body>
-  <h1>style="text-align:center;">YOUR NAME</h1>
-  <p>style="text-align:center;">STORY PORTALe!
+  <h1>YOUR NAME</h1>
+  <p>STORY PORTALe!
 
     <a href="https://StoryPortal.github.io/test.html">Choose this to progress in the story</a>
   </p>
