--- a/index.html
+++ b/index.html
@@ -1,5 +1,10 @@
 # StoryPortal.github.io
-<link rel="stylesheet" type="text/css" href="style.css">
+# <link rel="stylesheet" type="text/css" href="style.css">
+
+<head>
+    <link rel="stylesheet" href="styles.css">
+</head>
+
 <body>
   <h1>YOUR NAME</h1>
   <p>STORY PORTALe!
