--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-  <h1>YOUR NAME</h1>
+  <h1> TELL ME YOUR NAME</h1>
   <p>STORY PORTALe!
 
     <a href="https://StoryPortal.github.io/test.html">Choose this to progress in the story</a>
