--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 # <link rel="stylesheet" type="text/css" href="style.css">
 
 <head>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="Style.css">
 </head>
 
 <body>
-  <h1> TELL ME YOUR NAME AGAIN</h1>
+  <h1> TELL ME YOUR NAME AGAIN!</h1>
   <p>STORY PORTALe!
 
     <a href="https://StoryPortal.github.io/test.html">Choose this to progress in the story</a>
