--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 # StoryPortal.github.io
 # <link rel="stylesheet" type="text/css" href="style.css">
+<head>
+    <link rel="stylesheet" type="text/css" href="style.css">
+</head>
 
 <body>
   <h1> TELL ME YOUR NAME AGAIN!</h1>
-  <p>STORY PORTALe!
+  <p>STORY PORTAL
 
     <a href="https://StoryPortal.github.io/test.html">Choose this to progress in the story</a>
   </p>
