First pass story progression

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <h1> TELL ME YOUR NAME AGAIN!</h1>
   <p>STORY PORTAL
 
-    <a href="https://StoryPortal.github.io/test.html">Choose this to progress in the story</a>
+    <a href="https://StoryPortal.github.io/P1Q1.html">Choose this to progress in the story</a>
   </p>
 </body>
 
