--- a/P1Q1.html
+++ b/P1Q1.html
@@ -6,7 +6,7 @@
 
     Zzzzz. I’m still tired, you say to Cat.
   </p>
-
+<div class = "questions">
   <p>
     <a href="https://StoryPortal.github.io/P1Q1A1.html">A) Go back to bed   )</a>
   </p>
@@ -19,4 +19,6 @@
   <p>  
     <a href="https://StoryPortal.github.io/P1Q1A.html">Get our your dream journal</a>
   </p>
+
+</div>
 </body>
