--- a/P1Q1.html
+++ b/P1Q1.html
@@ -7,8 +7,8 @@
     Zzzzz. I’m still tired, you say to Cat.
   </p>
 <div class = "questions">
-  <p>
-    <a href="https://StoryPortal.github.io/P1Q1A1.html">A) Go back to bed   )</a>
+  <p class = "q1">
+    <a href="https://StoryPortal.github.io/P1Q1A1.html">A) Go back to bed</a>
   </p>
   <p>  
     <a href="https://StoryPortal.github.io/P1Q1A2.html">B) Stroke your cat (ego)</a>
