--- a/P1Q1.html
+++ b/P1Q1.html
@@ -17,7 +17,7 @@
     <a href="https://StoryPortal.github.io/P1Q2.html">C) Check your trusted twitter news sources</a>
   </p>
   <p>  
-    <a href="https://StoryPortal.github.io/P1Q1A.html">Get our your dream journal</a>
+    <a href="https://StoryPortal.github.io/P1Q1A.html">D) Get our your dream journal</a>
   </p>
 
 </div>
