--- a/P1Q1.html
+++ b/P1Q1.html
@@ -6,6 +6,7 @@
 
     Zzzzz. I’m still tired, you say to Cat.
   </p>
+<div class = "newBlock">
 <div class = "questions">
   <p class = "q1">
     <a href="https://StoryPortal.github.io/P1Q1A1.html">A) Go back to bed</a>
@@ -19,6 +20,6 @@
   <p>  
     <a href="https://StoryPortal.github.io/P1Q1A.html">D) Get our your dream journal</a>
   </p>
-
+</div>
 </div>
 </body>
