--- a/P1Q1.html
+++ b/P1Q1.html
@@ -11,13 +11,13 @@
   <p class = "q1">
     <a href="https://StoryPortal.github.io/P1Q1A1.html">A) Go back to bed</a>
   </p>
-  <p>  
+  <p class = "q1">  
     <a href="https://StoryPortal.github.io/P1Q1A2.html">B) Stroke your cat (ego)</a>
   </p>
-  <p>  
+  <p class = "q1">  
     <a href="https://StoryPortal.github.io/P1Q2.html">C) Check your trusted twitter news sources</a>
   </p>
-  <p>  
+  <p class = "q1">  
     <a href="https://StoryPortal.github.io/P1Q1A.html">D) Get our your dream journal</a>
   </p>
 </div>
