--- a/P1Q1A4.html
+++ b/P1Q1A4.html
@@ -19,7 +19,7 @@
   <a href="https://StoryPortal.github.io/P1Q1A1.html">B) Blink slowly</a>
   </p>
   <p class = "q1">
-    <a href="https://StoryPortal.github.io/P1Q1A1.html">B) Pet cat :)</a>
+    <a href="https://StoryPortal.github.io/P1Q1A1.html">C) Pet cat :)</a>
   </p>
 </div>
 </div>
