--- a/P2Q1.html
+++ b/P2Q1.html
@@ -1,25 +1,30 @@
 <link rel="stylesheet" type="text/css" href="style.css">
 
 <body>
-  <h1>P1Q1</h1>
+  <h1>P2Q1</h1>
   <p>Ok. I think you’re going to have a NICE DAY… </p> 
 
-<p>You head out of the house, oblivious to the rest of the world.  As you step out of the door, you see a shooting star! It’s your l u c k y day.  . . . . . . . . . . . . . . .  You’ve never seen a shooting star during the day!  Your brain is OVERLOADED with dopamine.  You search the sky for more day stars :).  The stars notice you watching them 😯  
+<p>You head out of the house, oblivious to the rest of the world.  As you step out of the door, you see a shooting star! </p>
+<p></p>It’s your l u c k y day.  . . . . . . . . . . . . . . .  </p>
+<p></p>You’ve never seen a shooting star during the day!  Your brain is OVERLOADED with dopamine.  You search the sky for more day stars :).  </p>
+<p>The stars notice you watching them. 😯  </p>
 
-The stars arrive in duos, trios, then a whole ensemble.  As you walk along, you feel the stars blinking in time with your footsteps. You try picking up your pace and slowing down - the stars follow suit. You feel the stars are winking at you, but maybe you’re just conceited.  Your eyes follow their trail.  The stars dance in time. Their dance is a reverberation.  A reverberation in 40 Hz.     
+<p>The stars arrive in duos, trios, then a whole ensemble.  As you walk along, you feel the stars blinking in time with your footsteps. </p>
+<p>You try picking up your pace and slowing down - the stars follow suit. You feel the stars are winking at you, but maybe you’re just conceited.</p>
+<p>Your eyes follow their trail.  The stars dance in time. Their dance is a reverberation.  A reverberation in 40 Hz.</p>
 
-The stars continue their 40 Hz twinkle.  They’re definitely talking behind your back  >:> \ </p> 
+<p>The stars continue their 40 Hz twinkle.  They’re definitely talking behind your back  >:> \ </p> 
 
 
   </p>
 <div class = "newBlock">
 <div class = "questions">
   <p class = "q1">
-    <a href="https://StoryPortal.github.io/P2Q4.html">Travel the path of the stars.   
+    <a href="https://StoryPortal.github.io/P2Q2.html">A)Travel the path of the stars.   
 </a>
   </p>
   <p class = "q1">  
-    <a href="https://StoryPortal.github.io/P2Q3A1.html">B) You turn away from the stars, showing them you refuse to be mocked!!!  </a>
+    <a href="https://StoryPortal.github.io/P2Q3.html">B) You turn away from the stars, showing them you refuse to be mocked!!!  </a>
   </p>
 
 </div>
