--- a/P1Q1/P1Q1A4.html
+++ b/P1Q1/P1Q1A4.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" type="text/css" href="style.css">
+<link rel="stylesheet" type="text/css" href="../style.css">
 
 <body>
   <h1>P1Q1C4</h1>
