--- a/P1Q1/P1Q1.html
+++ b/P1Q1/P1Q1.html
@@ -9,16 +9,16 @@
 <div class = "newBlock">
 <div class = "questions">
   <p class = "q1">
-    <a href="https://StoryPortal.github.io/P1Q1A1.html">A) Go back to bed</a>
+    <a href="https://StoryPortal.github.io/P1Q1/P1Q1A1.html">A) Go back to bed</a>
   </p>
   <p class = "q1">  
-    <a href="https://StoryPortal.github.io/P1Q1A2.html">B) Stroke your cat (ego)</a>
+    <a href="https://StoryPortal.github.io/P1Q1/P1Q1A2.html">B) Stroke your cat (ego)</a>
   </p>
   <p class = "q1">  
-    <a href="https://StoryPortal.github.io/P1Q2.html">C) Check your trusted twitter news sources</a>
+    <a href="https://StoryPortal.github.io/P1Q1/P1Q2.html">C) Check your trusted twitter news sources</a>
   </p>
   <p class = "q1">  
-    <a href="https://StoryPortal.github.io/P1Q1A4.html">D) Get our your dream journal</a>
+    <a href="https://StoryPortal.github.io/P1Q1/P1Q1A4.html">D) Get our your dream journal</a>
   </p>
 </div>
 </div>
