--- a/P1Q1/P1Q1.html
+++ b/P1Q1/P1Q1.html
@@ -15,7 +15,7 @@
     <a href="https://StoryPortal.github.io/P1Q1/P1Q1A2.html">B) Stroke your cat (ego)</a>
   </p>
   <p class = "q1">  
-    <a href="https://StoryPortal.github.io/P1Q2.html">C) Check your trusted twitter news sources</a>
+    <a href="https://StoryPortal.github.io/P1Q1/P1Q1A3.html">C) Check your trusted twitter news sources</a>
   </p>
   <p class = "q1">  
     <a href="https://StoryPortal.github.io/P1Q1/P1Q1A4.html">D) Get our your dream journal</a>
