link typo fixes

--- a/P1Q1/P1Q1A4.html
+++ b/P1Q1/P1Q1A4.html
@@ -13,13 +13,13 @@
   <div class = "newBlock">
     <div class = "questions">
   <p class = "q1">
-    <a href="https://StoryPortal.github.io/P1Q1A1.html">A) Sigh deeply</a>
+    <a href="https://StoryPortal.github.io/P1Q1/P1Q1A1.html">A) Sigh deeply</a>
   </p>
   <p class = "q1">
-  <a href="https://StoryPortal.github.io/P1Q1A1.html">B) Blink slowly</a>
+  <a href="https://StoryPortal.github.io/P1Q1/P1Q1A1.html">B) Blink slowly</a>
   </p>
   <p class = "q1">
-    <a href="https://StoryPortal.github.io/P1Q1A1.html">C) Pet cat :)</a>
+    <a href="https://StoryPortal.github.io/P1Q1/P1Q1A1.html">C) Pet cat :)</a>
   </p>
 </div>
 </div>
