--- a/P1Q1/P1Q1A2.html
+++ b/P1Q1/P1Q1A2.html
@@ -8,10 +8,10 @@
   <div class = "newBlock">
     <div class = "questions">
   <p class = "q1">
-    <a href="https://StoryPortal.github.io/P1Q1A1/P1Q1A1.html">A) Stroke it again!!</a>
+    <a href="https://StoryPortal.github.io/P1Q1/P1Q1A1.html">A) Stroke it again!!</a>
   </p>
   <p class = "q1">
-  <a href="https://StoryPortal.github.io/P1Q1A1/P1Q1.html">B) Ok, no more stroking!!</a>
+  <a href="https://StoryPortal.github.io/P1Q1/P1Q1.html">B) Ok, no more stroking!!</a>
   </p>
 </div>
 </div>
