--- a/P2Q1.html
+++ b/P2Q1.html
@@ -5,8 +5,8 @@
   <p>Ok. I think you’re going to have a NICE DAY… </p> 
 
 <p>You head out of the house, oblivious to the rest of the world.  As you step out of the door, you see a shooting star! </p>
-<p></p>It’s your l u c k y day.  . . . . . . . . . . . . . . .  </p>
-<p></p>You’ve never seen a shooting star during the day!  Your brain is OVERLOADED with dopamine.  You search the sky for more day stars :).  </p>
+<p>It’s your l u c k y day.  . . . . . . . . . . . . . . .  </p>
+<p>You’ve never seen a shooting star during the day!  Your brain is OVERLOADED with dopamine.  You search the sky for more day stars :).  </p>
 <p>The stars notice you watching them. 😯  </p>
 
 <p>The stars arrive in duos, trios, then a whole ensemble.  As you walk along, you feel the stars blinking in time with your footsteps. </p>
