--- a/P2Q1.html
+++ b/P2Q1.html
@@ -13,7 +13,7 @@
   <p>You try picking up your pace and slowing down - the stars follow suit. You feel the stars are winking at you, but maybe you’re just conceited.</p>
   <p>Your eyes follow their trail.  The stars dance in time. Their dance is a reverberation.  A reverberation in 40 Hz.</p>
   
-  <p>The stars continue their 40 Hz twinkle.  They’re definitely talking behind your back  >:> \ </p> 
+  <p>The stars continue their 40 Hz twinkle.  They’re definitely talking behind your back  </p> 
 
 
   </p>
