--- a/P3Q1/P3Q1A1A1.html
+++ b/P3Q1/P3Q1A1A1.html
@@ -12,7 +12,7 @@
   </p>
       
   <p class = "q1">
-    <a href="https://StoryPortal.github.io/P3Q1/P3Q1A2.html"> B) Decline. This is going too far... </a>
+    <a href="https://StoryPortal.github.io/P3Q1/P3Q1A1A2.html"> B) Decline. This is going too far... </a>
   </p>
 
 </div>
