--- a/P3Q1/P3Q1.html
+++ b/P3Q1/P3Q1.html
@@ -3,12 +3,12 @@
 
 <body>
   <h1>P3Q1</h1>
-  <p>As you walk along the dark path, you notice two glowing eyes following you from the bush.  
-    AN EVIL WITCH TAKES YOU AWAY ON HER BROOMSTICK. You are hanging on by a thread attached to her broomstick.
-    Suddenly, she lifts you onto the back of her broomstick. As you fly across the Seattle cityscape, 
-    she offers you the most beautiful looking dessert you’ve ever seen.  Golden, flaky pastry and glossy fruits
-    that look like jewels. You realize how hungry you are…. All you had for breakfast was  “All Fluff No Stuff” 
-    after all. Do you: 
+  <p>As you walk along the dark path, you notice two glowing eyes following you from the bush.  <br>
+    AN EVIL WITCH EMERGES AND TAKES YOU AWAY ON HER BROOMSTICK!! <br> 
+    You fly across the cityscape of Seattle seated on the back of her broomstick. Luckily, it's dry today. <br> 
+    The witch turns and offers you the most beautiful looking dessert you’ve ever seen.  Golden, flaky pastry and glossy fruits
+    that look like jewels. 
+    <br> You realize you are very hungry. All you had for breakfast was  “All Fluff No Stuff” after all. Do you: 
   </p>
 <div class = "newBlock">
 <div class = "questions">
