--- a/P3Q1/P3Q1.html
+++ b/P3Q1/P3Q1.html
@@ -3,12 +3,17 @@
 
 <body>
   <h1>P3Q1</h1>
-  <p>As you walk along the dark path, you notice two glowing eyes following you from the bush.  <br>
-    AN EVIL WITCH EMERGES AND TAKES YOU AWAY ON HER BROOMSTICK!! <br> 
-    You fly across the cityscape of Seattle seated on the back of her broomstick. Luckily, it's dry today. <br> 
-    The witch turns and offers you the most beautiful looking dessert you’ve ever seen.  Golden, flaky pastry and glossy fruits
-    that look like jewels. 
-    <br> You realize you are very hungry. All you had for breakfast was  “All Fluff No Stuff” after all. Do you: 
+>As you walk along the dark path, you notice two glowing eyes following you from the bush.  <br><br> 
+    AN EVIL WITCH EMERGES AND TAKES YOU AWAY ON HER BROOMSTICK!! <br><br> 
+    You fly across the cityscape of Seattle seated on the back of her broomstick. Luckily, it's dry today. <br><br> 
+    The witch turns and offers you the most beautiful looking dessert you’ve ever seen.  <br><br>
+    Golden <br><br>
+    flaky <br><br> 
+    pastry <br><br>
+    and glossy fruits <br><br> 
+    that look like jewels. <br><br> 
+    <br> You realize you are very hungry. All you had for breakfast was  “All Fluff No Stuff” after all. 
+    <br><br> Do you: 
   </p>
 <div class = "newBlock">
 <div class = "questions">
