--- a/P3Q1/P3Q1A1.html
+++ b/P3Q1/P3Q1A1.html
@@ -2,8 +2,11 @@
 
 <body>
   <h1>P3Q1A1</h1>
-  <p> You choose to eat the pastry. It's as delicious as it looks! The witch offers you another 
-    pastry with chocolate mousse and chocolate curls. You're still quite hungry.... Do you: 
+  <p> You choose to eat the pastry. <br><br>
+    It's as delicious as it looks! The witch offers you another
+    pastry. Chocolate chocolate chocolate. <br><br> 
+    You're still quite hungry.... <br><br>
+    Do you: 
   </p>
 
   <div class = "newBlock">
