--- a/P3Q1/P3Q1.html
+++ b/P3Q1/P3Q1.html
@@ -3,7 +3,7 @@
 
 <body>
   <h1>P3Q1</h1>
->As you walk along the dark path, you notice two glowing eyes following you from the bush.  <br><br> 
+<p> As you walk along the dark path, you notice two glowing eyes following you from the bush.  <br><br> 
     AN EVIL WITCH EMERGES AND TAKES YOU AWAY ON HER BROOMSTICK!! <br><br> 
     You fly across the cityscape of Seattle seated on the back of her broomstick. Luckily, it's dry today. <br><br> 
     The witch turns and offers you the most beautiful looking dessert you’ve ever seen.  <br><br>
