--- a/P3Q1/P3Q1A1A2.html
+++ b/P3Q1/P3Q1A1A2.html
@@ -2,8 +2,14 @@
 
 <body>
   <h1>P3Q1A1</h1>
-  <p> You finish your pastry. Delicious!! You Lick your fingers and pick off all the crumbs on your shirt. 
-    All of a sudden you start feeling veeeerrryy sleeepppyy. 
+  <p> You finish your pastry. Delicious!! <br><br>
+    You lick your fingers and pick off all the crumbs on your shirt. <br><br>
+    Oh no <br><br>
+    . <br>
+    . <br>
+    . <br> 
+    you start feeling <br><br> 
+    v v ee rrrr y yy yy sslll eee ee ee p p p y 
   </p>
 
   <div class = "newBlock">
