--- a/P3Q1/P3Q1A1A2.html
+++ b/P3Q1/P3Q1A1A2.html
@@ -4,12 +4,12 @@
   <h1>P3Q1A1</h1>
   <p> You finish your pastry. Delicious!! <br><br>
     You lick your fingers and pick off all the crumbs on your shirt. <br><br>
-    Oh no <br><br>
+    Oh no <br>
     . <br>
     . <br>
     . <br> 
-    you start feeling <br><br> 
-    v v ee rrrr y yy yy sslll eee ee ee p p p y 
+    all of a sudden you're feeling <br><br> 
+    vveeerryy sleeepyy 
   </p>
 
   <div class = "newBlock">
