--- a/P3Q2/P3Q2.html
+++ b/P3Q2/P3Q2.html
@@ -2,20 +2,24 @@
 
 <body>
   <h1>P3Q2</h1>
-  <p> She takes you to a large (and rather cozy looking) nest on top of the Space Needle. Inside her nest is a beautiful and well-stocked kitchen. 
-    You marvel at the rows and rows of vialed concoctions and herbs. “You have, like, the best view in Seattle!” you say as you look out at the scenery, 
-    from the city to the ocean. 
+  <p> She takes you to a large (and rather cozy looking) nest on top of the Space Needle. <br><br>
+    Inside her nest is a ~beautiful~ and well-stocked kitchen. <br><br>
+    You marvel at the rows and rows of vialed concoctions and herbs. <br><br>
+    “You have, like, the best view in Seattle!” you say as you look out at the scenery, from the city to the ocean. 
 
-    <br> 
-   The witch says, “Yeah I’ve lived here a long time.” She then turns on her stereo and says,
-    “Let me put on some cooking music” and smiles… Some booming house music starts to play.  
-    As the music envelopes you, you feel your body vibrating. You: 
+    <br><br><br> 
+   The witch says, “Yeah I’ve lived here a long time.” <br><br> 
+    She then turns on her stereo and says, <br><br>
+    “Let me put on some cooking music” and smiles. <br><br> 
+    Some booming house music starts to play. <br><br> 
+    As the music envelopes you, you feel your body vibrating. <br><br>
+    You: 
 
   </p>
 <div class = "newBlock">
 <div class = "questions">
   <p class = "q1">
-    <a href="https://StoryPortal.github.io/P3Q2/P3Q2A1.html">A) Grab your tuning fork to test the vibrations    </a>
+    <a href="https://StoryPortal.github.io/P3Q2/P3Q2A1.html">A) Grab your tuning fork to test the vibrations.    </a>
   </p>
   
   <p class = "q1">  
@@ -23,7 +27,7 @@
   </p>
 
     <p class = "q1">  
-    <a href="https://StoryPortal.github.io/P3Q2/P3Q2A3.html">C) Feel your inner dancer emerge, and pull out your best running man  </a>
+    <a href="https://StoryPortal.github.io/P3Q2/P3Q2A3.html">C) Feel your inner dancer emerge, and pull out your best running man.  </a>
   </p>
 
 </div>
