--- a/P3Q2/P3Q2.html
+++ b/P3Q2/P3Q2.html
@@ -5,14 +5,14 @@
   <p> She takes you to a large (and rather cozy looking) nest on top of the Space Needle. <br><br>
     Inside her nest is a ~beautiful~ and well-stocked kitchen. <br><br>
     You marvel at the rows and rows of vialed concoctions and herbs. <br><br>
-    “You have, like, the best view in Seattle!” you say as you look out at the scenery, from the city to the ocean. 
+    “You have, like, the best view in Seattle!” you say groggily as you look out at the scenery, from the city to the ocean. 
 
     <br><br><br> 
    The witch says, “Yeah I’ve lived here a long time.” <br><br> 
-    She then turns on her stereo and says, <br><br>
-    “Let me put on some cooking music” and smiles. <br><br> 
+    She crosses the room, looks at her phone and turns on the stereo <br><br>
+    “Some cooking music” she says with a smile :) <br><br> 
     Some booming house music starts to play. <br><br> 
-    As the music envelopes you, you feel your body vibrating. <br><br>
+    As the music envelopes you, your whole body vibrates. <br><br>
     You: 
 
   </p>
