--- a/P3Q3/P3Q3.html
+++ b/P3Q3/P3Q3.html
@@ -2,20 +2,29 @@
 
 <body>
   <h1>P3Q3</h1>
-  <p> Your eyes go wide, the witch seems to know what you saw.  Desperate to get out of the witch’s nest, you look for an exit.  <br>
-    You ask politely for the restroom, hoping the witch doesn’t realize your desperation to exit.  “Down the hall, 3rd door on the right” she says, <br>
-    a crooked smile forming at the edge of her lips.  <br> 
+  <p> Your eyes go wide, the witch seems to know what you saw.  <br><br>
+    Desperate to get out of the witch’s nest, you look for an exit.  <br><br>
+    You ask politely for the restroom, hoping the witch doesn’t realize your desperation to leave.  <br><br>
+    “Down the hall, 3rd door on the right” she says.  <br><br>
 
-    Once in the hallway, you race to the nearest room with a window. 
-    As you look out, you momentarily forget your fear as your eyes fall upon a twisting vortex in the middle of the Puget Sound.  
-    You swear you can hear music coming from the vortex, but aren’t sure if it’s just your nerves tricking you. 
-    The sight is distracting, you grow calmer.  Your thoughts drift to the pastry you ate earlier, wow were they good.
-    You sit down for a moment to rest: you’ve been through a lot.  
-    The thought of a flaky pastry is the last thing to flash through your mind’s eye as you drift into a blissful sleep.
+    Once in the hallway, you race to the nearest room with a window.  <br><br>
+    As you look out, you momentarily forget your fear as your eyes fall upon a twisting vortex in the middle of the Puget Sound.   <br><br>
+    You swear you can hear music coming from the vortex, but aren’t sure if it’s just your nerves tricking you.  <br><br>
+    The sight is distracting, and you grow calmer.  <br><br>
+    Your thoughts drift to the pastry you ate earlier, wow were they good. <br><br>
+    You sit down for a moment to rest:  <br><br> <br><br> <br><br>
+    you’ve been through a lot.   <br><br> <br><br>
+    The thought of a flaky pastry is the last thing to flash through your mind as you drift into a blissful sleep. <br><br>
 
-    In your sleep, you appear next to the swirling vortex you saw in the water.  Something tells you it’s a portal leading you somewhere you *really* want to visit.  
-    The music you thought you heard emanates loudly from somewhere within the vortex.  You reach out a hand, then your leg, and then let your body pass through the portal. 
-    The music rises… you think you can see a few butterflies... 
+     <br><br> <br><br> <br><br>
+    In your sleep, you appear next to the swirling vortex you saw in the water.  <br><br>
+    It entices you. You want to get closer to hear the curious music better. <br><br>
+    The music you thought you heard emanates loudly from somewhere within the vortex.   <br><br>
+    You reach out a hand,  <br><br>
+    then your leg,  <br><br>
+    and then let your body pass through the portal.  <br><br>
+    The music rises…  <br><br>
+    you think you can see a few butterflies... 
     
   </p>
 
