--- a/P3Q3/P3Q3.html
+++ b/P3Q3/P3Q3.html
@@ -12,21 +12,10 @@
     You swear you can hear music coming from the vortex, but aren’t sure if it’s just your nerves tricking you.  <br><br>
     The sight is distracting, and you grow calmer.  <br><br>
     Your thoughts drift to the pastry you ate earlier, wow were they good. <br><br>
-    You sit down for a moment to rest:  <br><br> <br><br> <br><br>
-    you’ve been through a lot.   <br><br> <br><br>
-    The thought of a flaky pastry is the last thing to flash through your mind as you drift into a blissful sleep. <br><br>
-
-     <br><br> <br><br> <br><br>
-    In your sleep, you appear next to the swirling vortex you saw in the water.  <br><br>
-    It entices you. You want to get closer to hear the curious music better. <br><br>
-    The music you thought you heard emanates loudly from somewhere within the vortex.   <br><br>
-    You reach out a hand,  <br><br>
-    then your leg,  <br><br>
-    and then let your body pass through the portal.  <br><br> 
-    The music rises…  <br><br>
-    you think you can see a few butterflies... 
+    You sit down for a moment to rest:  <br><br> <br><br> 
     
-  </p>
+      <p class = "q1">
+    <a href="https://StoryPortal.github.io/P3Q3/P3Q3A1.html"> you've been through a lot </a>
 
   
 
