--- a/P3Q5/P3Q5.html
+++ b/P3Q5/P3Q5.html
@@ -2,10 +2,12 @@
 
 <body>
   <h1>P3Q5</h1>
-  <p> As the house music plays on, you look out at the window at Elliott Bay and notice the waves becoming more and more regular. 
-    The waves crash with the beat of the music! The water starts to part and you notice a black hole form. 
-    You notice a big cloud of colorful butterflies move in a cloud across the water towards the witch’s nest.
-    The butterflies encircle the nest and one of them says to you, “You’ve gotta get out of here!! Some of us will distract her and you can come with us!” 
+  <p> As the house music plays on, you look out at the window at Elliott Bay and notice the waves becoming more and more regular. <br><br>
+    The waves crash with the beat of the music! <br><br>
+    The water starts to part and you notice a black hole form.  <br><br>
+    You notice a big cloud of colorful butterflies move in a cloud across the water towards the witch’s nest. <br><br>
+    The butterflies encircle the nest and one of them says to you,  <br><br>
+    “You’ve gotta get out of here!! Some of us will distract her and you can come with us!” 
 
 
   </p>
