--- a/P3Q5/P3Q5A2.html
+++ b/P3Q5/P3Q5A2.html
@@ -14,3 +14,19 @@
 </div>
 </div>
 </body>
+
+<link rel="stylesheet" type="text/css" href="../style.css">
+
+<body>
+  <h1>P3Q5A2</h1>
+  <p> You get closer to the portal, the music becomes more apparent. <br><br> 
+      Its tenor and tone are mysterious to you… voices appear out of the ether. 
+    
+      <p class = "q1">
+    <a href="https://StoryPortal.github.io/P3Q3/P3Q3A3.html"> What's on the other side? </a>
+
+  
+
+</div>
+</div>
+</body>
