--- a/P2Q1.html
+++ b/P2Q1.html
@@ -4,16 +4,23 @@
   <h1>P2Q1</h1>
   <p>Ok. I think you’re going to have a NICE DAY… </p> 
 
-  <p>You head out of the house, oblivious to the rest of the world.  As you step out of the door, you see a shooting star! </p>
-  <p>It’s your l u c k y day.  . . . . . . . . . . . . . . .  </p>
-  <p>You’ve never seen a shooting star during the day!  Your brain is OVERLOADED with dopamine.  You search the sky for more day stars :).  </p>
-  <p>The stars notice you watching them. 😯  </p>
+  You head out of the house, oblivious to the rest of the world.  As you step out of the door, you see a shooting star! <br><br> 
+  It’s your l u c k y day!  <br><br> 
+  You’ve never seen a shooting star during the day!  Your brain is OVERLOADED with dopamine.   <br><br> 
+    You search the sky for more day stars :)  <br><br> 
+  The stars notice you watching them. 😯  <br><br> 
   
-  <p>The stars arrive in duos, trios, then a whole ensemble.  As you walk along, you feel the stars blinking in time with your footsteps. </p>
-  <p>You try picking up your pace and slowing down - the stars follow suit. You feel the stars are winking at you, but maybe you’re just conceited.</p>
-  <p>Your eyes follow their trail.  The stars dance in time. Their dance is a reverberation.  A reverberation in 40 Hz.</p>
+  The stars arrive in duos, trios, then a whole ensemble.   <br><br> 
+  As you walk along, you feel the stars blinking in time with your footsteps. <br><br> 
+  You try picking up your pace and slowing down - the stars follow suit.  <br><br> 
+
+  Your eyes follow their trail.   <br><br> 
+  The stars dance in time.  <br><br> 
+  In reverberation. <br><br> 
+  A reverberation in 40 Hz.</p>
   
-  <p>The stars continue their 40 Hz twinkle.  They’re definitely talking behind your back  </p> 
+  The stars continue their 40 Hz twinkle.   <br><br> 
+  They’re definitely talking behind your back   <br><br> 
 
 
   </p>
@@ -24,7 +31,7 @@
 </a>
   </p>
   <p class = "q1">  
-    <a href="https://StoryPortal.github.io/P2Q3.html">B) You turn away from the stars, showing them you refuse to be mocked!!!  </a>
+    <a href="https://StoryPortal.github.io/P3Q1/P3Q1.html">B) You turn away from the stars, showing them you refuse to be mocked!!!  </a>
   </p>
 
 </div>
