--- a/P1Q3.html
+++ b/P1Q3.html
@@ -27,11 +27,11 @@
 <div class = "newBlock">
 <div class = "questions">
   <p class = "q1">
-    <a href="https://StoryPortal.github.io/P2Q2.html">A)Travel the path of the stars.   
+    <a href="https://StoryPortal.github.io/P3Q1/P3Q1.html">A)Travel the path of the stars.   
 </a>
   </p>
   <p class = "q1">  
-    <a href="https://StoryPortal.github.io/P3Q1/P3Q1.html">B) You turn away from the stars, showing them you refuse to be mocked!!!  </a>
+    <a href="https://StoryPortal.github.io/P2Q1/P2Q1.html">B) You turn away from the stars, showing them you refuse to be mocked!!!  </a>
   </p>
 
 </div>
