--- a/P2Q1/P2Q1.html
+++ b/P2Q1/P2Q1.html
@@ -9,18 +9,21 @@
   <p style ="color: yellow;"> Ƹ̵̡Ӝ̵̨̄Ʒ Ƹ̵̡Ӝ̵̨̄Ʒ Ƹ̵̡Ӝ̵̨̄Ʒ Ƹ̵̡Ӝ̵̨̄Ʒ Ƹ̵̡Ӝ̵̨̄Ʒ Ƹ̵̡Ӝ̵̨̄Ʒ Ƹ̵̡Ӝ̵̨̄Ʒ Ƹ̵̡Ӝ̵̨̄Ʒ Ƹ̵̡Ӝ̵̨̄Ʒ Ƹ̵̡Ӝ̵̨̄Ʒ<br></p>
   <p style ="color: green;"> Ƹ̵̡Ӝ̵̨̄Ʒ Ƹ̵̡Ӝ̵̨̄Ʒ Ƹ̵̡Ӝ̵̨̄Ʒ Ƹ̵̡Ӝ̵̨̄Ʒ Ƹ̵̡Ӝ̵̨̄Ʒ Ƹ̵̡Ӝ̵̨̄Ʒ Ƹ̵̡Ӝ̵̨̄Ʒ Ƹ̵̡Ӝ̵̨̄Ʒ Ƹ̵̡Ӝ̵̨̄Ʒ Ƹ̵̡Ӝ̵̨̄Ʒ Ƹ̵̡Ӝ̵̨̄Ʒ Ƹ̵̡Ӝ̵̨̄Ʒ Ƹ̵̡Ӝ̵̨̄Ʒ Ƹ̵̡Ӝ̵̨̄Ʒ<br><br></p>
   <p>
-  The circling butterflies create a protective and iridescent bubble that surrounds you as you walk along. You feel as if you are almost flying too. One of the butterflies says to you, “Hey do you want to go somewhere really cool?” 
+  The circling butterflies create a protective and iridescent bubble around you. You feel air underneath you feet: ...
+  ... <br>
+  wow, you're floating! <br>
+  One of the butterflies says to you, “Hey do you want to go somewhere ~*really cool?*~” 
   </p>
 <div class = "newBlock">
 <div class = "questions">
   <p class = "q1">
-    <a href="https://StoryPortal.github.io/P1Q1/P1Q1A1.html">A) You say yes and let yourself get swept away into the air in a cloud of butterflies</a>
+    <a href="https://StoryPortal.github.io/P2Q1/P2Q1A1.html">A) You say yes and let yourself get swept away into the air in a cloud of butterflies</a>
   </p>
   <p class = "q1">  
-    <a href="https://StoryPortal.github.io/P1Q1/P1Q1A2.html">B) You decline and say actually you have a big day at work</a>
+    <a href="https://StoryPortal.github.io/P2Q1/P2Q1A2.html">B) You decline and say actually you have a big day at work :(</a>
   </p>
   <p class = "q1">  
-    <a href="https://StoryPortal.github.io/P1Q1/P1Q1A3.html">C) You’ve never been in this situation before so you feel awkward and run back home</a>
+    <a href="https://StoryPortal.github.io/P2Q1/P2Q1A3.html">C) You’ve never been in this situation before so you feel awkward and run back home</a>
   </p>
 </div>
 </div>
