--- a/P2Q1/P2Q1.html
+++ b/P2Q1/P2Q1.html
@@ -10,14 +10,14 @@
   <p style ="color: green;"> Ƹ̵̡Ӝ̵̨̄Ʒ Ƹ̵̡Ӝ̵̨̄Ʒ Ƹ̵̡Ӝ̵̨̄Ʒ Ƹ̵̡Ӝ̵̨̄Ʒ Ƹ̵̡Ӝ̵̨̄Ʒ Ƹ̵̡Ӝ̵̨̄Ʒ Ƹ̵̡Ӝ̵̨̄Ʒ Ƹ̵̡Ӝ̵̨̄Ʒ Ƹ̵̡Ӝ̵̨̄Ʒ Ƹ̵̡Ӝ̵̨̄Ʒ Ƹ̵̡Ӝ̵̨̄Ʒ Ƹ̵̡Ӝ̵̨̄Ʒ Ƹ̵̡Ӝ̵̨̄Ʒ Ƹ̵̡Ӝ̵̨̄Ʒ<br><br></p>
   <p>
   The circling butterflies create a protective and iridescent bubble around you. You feel air underneath your feet: ...
-  ... <br>
+  ... <br><br><br><br>
   wow, you're floating! <br>
   One of the butterflies says to you, “Hey do you want to go somewhere ~*really cool?*~” 
   </p>
 <div class = "newBlock">
 <div class = "questions">
   <p class = "q1">
-    <a href="https://StoryPortal.github.io/P2Q1/P2Q1A1.html">A) You say yes and let yourself get swept away into the air in a cloud of butterflies</a>
+    <a href="https://StoryPortal.github.io/P2Q2/P2Q2.html">A) You say yes and let yourself get swept away into the air in a cloud of butterflies</a>
   </p>
   <p class = "q1">  
     <a href="https://StoryPortal.github.io/P2Q1/P2Q1A2.html">B) You decline and say actually you have a big day at work :(</a>
