--- a/P2Q1/P2Q1.html
+++ b/P2Q1/P2Q1.html
@@ -11,7 +11,7 @@
   <p>
   The circling butterflies create a protective and iridescent bubble around you. You feel air underneath your feet: ...
   ... <br><br><br><br>
-  wow, you're floating! <br>
+  wow, you're floating! <br><br><br>
   One of the butterflies says to you, “Hey do you want to go somewhere ~*really cool?*~” 
   </p>
 <div class = "newBlock">
