--- a/P2Q1/P2Q1A3.html
+++ b/P2Q1/P2Q1A3.html
@@ -6,7 +6,7 @@
     <br>
     <br>
     <br>
-    Immediately, you start feeling FOMO and fantasizing about being with the butterflies…. (proceed to butterfly story) 
+    Immediately, you start feeling FOMO and fantasizing about being with the butterflies….
   </p>
 
 <div class = "newBlock">
