--- a/P2Q1/P2Q1A3A2.html
+++ b/P2Q1/P2Q1A3A2.html
@@ -11,7 +11,7 @@
 <div class = "newBlock">
 <div class = "questions">
   <p class = "q1">
-    <a href="https://StoryPortal.github.io/P2Q2/P2Q2.html">A) meow ;)</a>
+    <a href="https://StoryPortal.github.io/P2Q2/P2Q2.html"> meow ^-^</a>
   </p>
 </div>
 </div>
