--- a/P1Q2.html
+++ b/P1Q2.html
@@ -14,7 +14,7 @@
     <a href="https://StoryPortal.github.io/______________.html">B) Ambient Drones </a>
   </p>
   <p class = "q1">  
-    <a href="https://StoryPortal.github.io/P2Q1/P2Q1.html">C) 8bit Lord of the Rings Song Playlist </a>
+    <a href="https://StoryPortal.github.io/P1Q3.html">C) 8bit Lord of the Rings Song Playlist </a>
   </p>
   <p class = "q1">  
     <a href="https://StoryPortal.github.io/__________.html">D) All I Want for Christmas Is You </a>
