--- a/P3Q3/P3Q3A1.html
+++ b/P3Q3/P3Q3A1.html
@@ -11,7 +11,10 @@
     then your leg,  <br><br>
     and then let your body pass through the portal.  <br><br> 
     The music rises…  <br><br>
-    you think you can see a few butterflies...  <br><br> <br><br> 
+    you think you can see a few 
+   
+     <p class = "q1">
+    <a href="https://StoryPortal.github.io/index.html"> butterflies...<br>  Ƹ̵̡Ӝ̵̨̄Ʒ Ƹ̵̡Ӝ̵̨̄Ʒ Ƹ̵̡Ӝ̵̨̄Ʒ</a> <br><br> <br><br> 
 
 </div>
 </div>
