--- a/P3Q5/P3Q5A2.html
+++ b/P3Q5/P3Q5A2.html
@@ -6,10 +6,10 @@
       Its tenor and tone are mysterious to you… voices appear out of the ether. <br><br> 
       What's on the other side? 
     
-<!--       <p class = "q1">
-    <a href="https://StoryPortal.github.io/P3Q3/P3Q3A3.html"> What's on the other side? </a>
+      <p class = "q1">
+    <a href="https://StoryPortal.github.io/index.html"> the end</a>
 
-   -->
+
 
 </div>
 </div>
