--- a/P1Q2.html
+++ b/P1Q2.html
@@ -8,16 +8,16 @@
 <div class = "newBlock">
 <div class = "questions">
   <p class = "q1">
-    <a href="https://StoryPortal.github.io/P2Q1.html">A) Lo-Fi Chill Beats </a>
+    <a href="https://StoryPortal.github.io/P1Q3.html">A) Lo-Fi Chill Beats </a>
   </p>
   <p class = "q1">  
-    <a href="https://StoryPortal.github.io/______________.html">B) Ambient Drones </a>
+    <a href="https://StoryPortal.github.io/P1Q3.html">B) Ambient Drones </a>
   </p>
   <p class = "q1">  
     <a href="https://StoryPortal.github.io/P1Q3.html">C) 8bit Lord of the Rings Song Playlist </a>
   </p>
   <p class = "q1">  
-    <a href="https://StoryPortal.github.io/__________.html">D) All I Want for Christmas Is You </a>
+    <a href="https://StoryPortal.github.io/P1Q3.html">D) All I Want for Christmas Is You </a>
   </p>
 </div>
 </div>
