--- a/P3Q5/P3Q5A2.html
+++ b/P3Q5/P3Q5A2.html
@@ -6,9 +6,12 @@
       Its tenor and tone are mysterious to you… voices appear out of the ether. <br><br> 
       What's on the other side? 
     
-      <p class = "q1">
-    <a href="https://StoryPortal.github.io/index.html"> the end</a>
-
+  <p class = "q1">  
+    <a href="https://storyportal.github.io/P2Q2/P2Q2A1A1A1A1.html">A) Let the butterflies drop you into the portal </a>
+  </p>
+  <p class = "q1">  
+    <a href="https://StoryPortal.github.io/index.html">B) The portal is scary. Ask the butterflies to take you the long way home. </a>
+  </p>
 
 
 </div>
