--- a/index.html
+++ b/index.html
@@ -4,11 +4,15 @@
 </head>
 
 <body>
-  <h1> TELL ME YOUR NAME AGAIN!</h1>
-  <p>STORY PORTAL
+  <h1> STORY PORTAL </h1>
+  <p> STORY 1 
 
-    <a href="https://StoryPortal.github.io/P1Q1/P1Q1.html">Choose this to progress in the story</a>
+    <a href="https://StoryPortal.github.io/P1Q1/P1Q1.html">Start here</a>
   </p>
+
+<br><br><br><br> <br><br> <br><br> <br><br> 
+     <p> Art Neureu 2023 <br><br> 
+         --Todd Appleby and Su-Yee Lee -- </p> 
 </body>
 
 </html>
