--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <a href="https://StoryPortal.github.io/P1Q1/P1Q1.html">Start here</a>
   </p>
 
-<br><br><br><br> <br><br> <br><br> <br><br> 
-     <p> Art Neureu 2023 <br><br> 
+<br><br><br><br> <br><br> <br><br> <br><br> <br><br> <br><br> <br><br> <br><br> 
+     <p> Art Neureau 2023 <br><br> 
          --Todd Appleby and Su-Yee Lee -- </p> 
 </body>
 
