--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 
 <body>
   <h1> STORY PORTAL </h1>
+    <br><br><br> 
   <p> STORY 1 
 
     <a href="https://StoryPortal.github.io/P1Q1/P1Q1.html">Start here</a>
@@ -12,7 +13,8 @@
 
 <br><br><br><br> <br><br> <br><br> <br><br> <br><br> <br><br> <br><br> <br><br> 
      <p> Art Neureau 2023 <br><br> 
-         --Todd Appleby and Su-Yee Lee -- </p> 
+         --Todd Appleby and Su-Yee Lee -- <br> 
+     <a href="https://StoryPortal.github.io/about.html"> About </a> </p> 
 </body>
 
 </html>
