--- a/about.html
+++ b/about.html
@@ -5,8 +5,10 @@
   <p> This project is a collaboration between Todd Appleby and Su-Yee Lee, two neuroscientists. <br><br>
     Inspired by choose-your-own adventure books, online personality tests and neural circuits - <br><br>
     we wanted to create a multimedia project that was greater than the sum of its parts. <br><br>
-    The website is constructed of linked web pages with connected paths informed by neural circuit motifs, e.g. recurrence, parallel pathways, feedforward/back. <br><br> 
-    We hope to make more stories and multimedia content in the future. This is the first. <br><br>
+    The website is constructed of linked web pages with connected paths informed by neural circuit motifs, <br><br>
+    e.g. recurrence, parallel pathways, feedforward/back. <br><br> <br><br> 
+    We hope to make more stories and multimedia content in the future. <br><br> 
+    This is the first. <br><br><br><br>
     
   <p class = "q1">  
     <a href="https://StoryPortal.github.io/index.html" 1/?  </a>
