--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <br><br><br><br> <br><br> <br><br> <br><br> <br><br> <br><br> <br><br> <br><br> 
      <p> Art Neureau 2023 <br><br> 
-         --Todd Appleby and Su-Yee Lee -- <br> 
+         --Todd Appleby and Su-Yee Lee -- <br><br> 
      <a href="https://StoryPortal.github.io/about.html"> About </a> </p> 
 </body>
 
