--- a/about.html
+++ b/about.html
@@ -9,9 +9,10 @@
     e.g. recurrence, parallel pathways, feedforward/back. <br><br> <br><br> 
     We hope to make more stories and multimedia content in the future. <br><br> 
     This is the first. <br><br><br><br>
+  </p>
     
   <p class = "q1">  
-    <a href="https://StoryPortal.github.io/index.html" 1/?  </a>
+    <a href="https://StoryPortal.github.io/index.html">1/?  </a>
   </p>
 
     
