--- a/P3Q1/P3Q1A2.html
+++ b/P3Q1/P3Q1A2.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" type="text/css" href="../style.css">
+<link rel="stylesheet" type="text/css" href="../black_style.css">
 
 <body>
   <h1>P3Q1A2</h1>
