--- a/P3Q5/P3Q5.html
+++ b/P3Q5/P3Q5.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" type="text/css" href="../style.css">
+<link rel="stylesheet" type="text/css" href="../black_style.css">
 
 <body>
   <h1>P3Q5</h1>
