--- a/full_song.html
+++ b/full_song.html
@@ -1,13 +1,16 @@
-<body>
-  <h1>Listen to the full portal song </h1>
+<head>
+    <link rel="stylesheet" type="text/css" href="style.css">
+</head>
 
-  <audio controls>
+<body>
+  <h1> Listen to the full portal song </h1>
+    <br><br><br> 
+
+    <audio controls>
   <source src="spaceWhaleMessages.mp3" type="audio/mpeg">
 
   </audio>
-
   
-
-</div>
-</div>
 </body>
+
+</html>
