--- a/full_song.html
+++ b/full_song.html
@@ -6,7 +6,7 @@
   <h1> Listen to the full portal song </h1>
     <br><br><br> 
 
-    <audio controls>
+    <audio controls autoplay>
   <source src="spaceWhaleMessages.mp3" type="audio/mpeg">
 
   </audio>
