--- a/full_song.html
+++ b/full_song.html
@@ -7,7 +7,7 @@
     <br><br><br> 
 
     <audio controls autoplay>
-  <source src="spaceWhaleMessages.mp3" type="audio/mpeg">
+  <source src="spaceWhaleMessages_mono.mp3" type="audio/mpeg">
 
   </audio>
   
