--- a/full_song.html
+++ b/full_song.html
@@ -10,7 +10,11 @@
 <p>
     <audio controls autoplay>
   <source src="spaceWhaleMessages_mono.mp3" type="audio/mpeg">      
- </p>
+
+<br><br><br><br><br><br>
+        
+    <a href="https://StoryPortal.github.io/index.html">back to the beginning</a>
+  </p>
     
   </audio>
   
