--- a/P2Q2/P2Q2A1.html
+++ b/P2Q2/P2Q2A1.html
@@ -1,4 +1,6 @@
 <link rel="stylesheet" type="text/css" href="../style.css">
+<audio controls autoplay>
+  <source src="spaceWhaleMessages_mono_01.mp3" type="audio/mpeg">
 
 <body>
   <h1>P2Q2A2</h1>
@@ -7,6 +9,7 @@
     Faint music reaches your ears
 
   </p>
+  
 <div class = "newBlock">
 <div class = "questions">
   <p class = "q1">
