--- a/P3Q3/P3Q3.html
+++ b/P3Q3/P3Q3.html
@@ -13,6 +13,11 @@
     The sight is distracting, and you grow calmer.  <br><br>
     Your thoughts drift to the pastry you ate earlier, wow were they good. <br><br>
     You sit down for a moment to rest:  <br><br> <br><br> 
+
+     <audio controls autoplay>
+    <source src="spaceWhaleMessages_mono_01.mp3" type="audio/mpeg">   
+
+       <br><br> <br><br> 
     
       <p class = "q1">
     <a href="https://StoryPortal.github.io/P3Q3/P3Q3A1.html"> you've been through a lot </a>
