--- a/P2Q2/P2Q2A1A1A1.html
+++ b/P2Q2/P2Q2A1A1A1.html
@@ -20,8 +20,11 @@
     <a href="https://StoryPortal.github.io/P2Q2/P2Q2A1A1A1A1.html">A)The portal’s energies are gripping your mind.  Let the butterflies drop you into the mouth of the portal</a>
   </p>
   <p class = "q1">
-    <a href="https://StoryPortal.github.io">B)The portal is very scary, and you have bad taste in music.  Tell the butterflies to take you home :(</a>
+    <a href="https://StoryPortal.github.io">B)The portal is very scary, and you have bad taste in music.  Tell the butterflies to take you home :(</a><br>
+    <audio controls autoplay>
+      <source src="spaceWhaleMessages_mono_03.mp3" type="audio/mpeg">
   </p>
+ 
 </div>
 </div>
 </body>
