--- a/P2Q2/P2Q2A1A1A1A1.html
+++ b/P2Q2/P2Q2A1A1A1A1.html
@@ -41,7 +41,7 @@ you gasp
       <p class = "q1">
         <a href="https://StoryPortal.github.io/">the end</a><br>
         <audio controls autoplay>
-          <source src="spaceWhaleMessages_mono_01.mp3" type="audio/mpeg">
+          <source src="spaceWhaleMessages_mono.mp3" type="audio/mpeg">
       </p>
     </div>
     </div>
