--- a/P2Q2/P2Q2A1A1.html
+++ b/P2Q2/P2Q2A1A1.html
@@ -15,7 +15,7 @@ Its tenor and tone are mysterious to you…<br>
 <div class = "newBlock">
 <div class = "questions">
   <p class = "q1">
-    <a href="https://StoryPortal.github.io/P2Q2/P2Q2A1A1A1.html">A) Ask the butterflies to take you closer</a>
+    <a href="https://StoryPortal.github.io/P2Q2/P2Q2A1A1A1.html">A) Ask the butterflies to take you closer</a><br><br><br><br><br><br><br>
     <audio controls autoplay>
       <source src="spaceWhaleMessages_mono_02.mp3" type="audio/mpeg">
   </p>
