--- a/P3Q5/P3Q5A2.html
+++ b/P3Q5/P3Q5A2.html
@@ -8,7 +8,9 @@
     <br><br>
 
    <audio controls autoplay>
-  <source src="spaceWhaleMessages_mono_02.mp3" type="audio/mpeg">   <br><br>
+  <source src="spaceWhaleMessages_mono_02.mp3" type="audio/mpeg"> 
+   </audio>
+    <br><br>
     
   <p class = "q1">  
     <a href="https://storyportal.github.io/P2Q2/P2Q2A1A1A1A1.html">A) Let the butterflies drop you into the portal </a>
