--- a/P2Q2/P2Q2A1A1A1A1.html
+++ b/P2Q2/P2Q2A1A1A1A1.html
@@ -42,6 +42,8 @@ you gasp
         <a href="https://StoryPortal.github.io/">the end</a><br><br><br><br><br><br><br>
         <audio controls autoplay>
           <source src="spaceWhaleMessages_mono.mp3" type="audio/mpeg">
+        </audio>
+
       </p>
     </div>
     </div>
