--- a/P3Q5/P3Q5A1.html
+++ b/P3Q5/P3Q5A1.html
@@ -16,7 +16,8 @@
   
   </p>
 
-  <p>    <audio controls autoplay>
+  <p>   
+    <audio controls autoplay>
     <source src="spaceWhaleMessages_mono_01.mp3" type="audio/mpeg">   
       </audio>
   </p>
