--- a/P2Q2/P2Q2A1A1A1.html
+++ b/P2Q2/P2Q2A1A1A1.html
@@ -1,5 +1,6 @@
+<head>
 <link rel="stylesheet" type="text/css" href="../style.css">
-
+</head>
 
 <body>
   <h1>P2Q2A2</h1>
@@ -31,3 +32,4 @@
   <source src="spaceWhaleMessages_mono_03.mp3" type="audio/mpeg">
   </audio>
 </body>
+</html>
