--- a/P3Q5/P3Q5A1.html
+++ b/P3Q5/P3Q5A1.html
@@ -18,7 +18,7 @@
 
 
 <audio controls autoplay>
-<source src="spaceWhaleMessages_mono_01.mp3" type="audio/mpeg">   
+<source src="../spaceWhaleMessages_mono_01.mp3" type="audio/mpeg">   
 </audio>
 
 
