--- a/P2Q2/P2Q2A1A1A1.html
+++ b/P2Q2/P2Q2A1A1A1.html
@@ -29,7 +29,7 @@
 </div>
 </div>
 <audio controls autoplay>
-  <source src="spaceWhaleMessages_mono_03.mp3" type="audio/mpeg">
+  <source src="../spaceWhaleMessages_mono_03.mp3" type="audio/mpeg">
   </audio>
 </body>
 </html>
