--- a/P3Q5/P3Q5A2.html
+++ b/P3Q5/P3Q5A2.html
@@ -8,7 +8,7 @@
     <br><br>
 
    <audio controls autoplay>
-  <source src="spaceWhaleMessages_mono_02.mp3" type="audio/mpeg"> 
+  <source src="../spaceWhaleMessages_mono_02.mp3" type="audio/mpeg"> 
    </audio>
     <br><br>
     
