--- a/P2Q2/P2Q2A1A1.html
+++ b/P2Q2/P2Q2A1A1.html
@@ -17,7 +17,7 @@ Its tenor and tone are mysterious to you…<br>
   <p class = "q1">
     <a href="https://StoryPortal.github.io/P2Q2/P2Q2A1A1A1.html">A) Ask the butterflies to take you closer</a><br><br><br><br><br><br><br>
     <audio controls autoplay>
-      <source src="spaceWhaleMessages_mono_02.mp3" type="audio/mpeg">
+      <source src="../spaceWhaleMessages_mono_02.mp3" type="audio/mpeg">
     
 
   </p>
