--- a/P3Q3/P3Q3.html
+++ b/P3Q3/P3Q3.html
@@ -15,7 +15,7 @@
     You sit down for a moment to rest:  <br><br> <br><br> 
 
      <audio controls autoplay>
-    <source src="spaceWhaleMessages_mono_01.mp3" type="audio/mpeg">   
+    <source src="../spaceWhaleMessages_mono_01.mp3" type="audio/mpeg">   
       </audio>
 
        <br><br> <br><br> 
