--- a/P3Q3/P3Q3A1.html
+++ b/P3Q3/P3Q3A1.html
@@ -14,7 +14,7 @@
     you think you can see a few 
 
     <audio controls autoplay>
-   <source src="spaceWhaleMessages_mono_02.mp3" type="audio/mpeg">
+   <source src="../spaceWhaleMessages_mono_02.mp3" type="audio/mpeg">
       </audio>
    
      <p class = "q1">
