--- a/P1Q3.html
+++ b/P1Q3.html
@@ -2,9 +2,7 @@
 
 <body>
   <h1>P2Q1</h1>
-  <p>Ok. I think you’re going to have a NICE DAY…
-
-  You head out of the house, oblivious to the rest of the world.  As you step out of the door, you see a shooting star! <br><br> 
+  <p> You head out of the house, oblivious to the rest of the world.  As you step out of the door, you see a shooting star! <br><br> 
   It’s your l u c k y day!  <br><br> 
   You’ve never seen a shooting star during the day!  Your brain is OVERLOADED with dopamine.   <br><br> 
     You search the sky for more day stars :)  <br><br> 
