--- a/P1Q1/P1Q1A3.html
+++ b/P1Q1/P1Q1A3.html
@@ -9,7 +9,7 @@
   <div class = "newBlock">
     <div class = "questions">
   <p class = "q1">
-    <a href="https://StoryPortal.github.io/P1Q2.html">A) Have a great day</a>
+    <a href="https://StoryPortal.github.io/P1Q2/P1Q2.html">A) Have a great day</a>
   </p>
   </p>
 </div>
