--- a/P1Q2/P1Q2.html
+++ b/P1Q2/P1Q2.html
@@ -1,8 +1,9 @@
 <link rel="stylesheet" type="text/css" href="style.css">
 
 <body>
-  <h1>P1Q1</h1>
-  <p>You get out of bed and have your favorite cereal “All Fluff No Stuff.” To start off the day, you decide to listen to some music. 
+  <h1>P1Q2</h1>
+  <p>
+    You get out of bed and have your favorite cereal “All Fluff No Stuff.” To start off the day, you decide to listen to some music. 
     What are you listening to today? 
   </p>
 <div class = "newBlock">
