--- a/P1Q3.html
+++ b/P1Q3.html
@@ -1,7 +1,7 @@
 <link rel="stylesheet" type="text/css" href="style.css">
 
 <body>
-  <h1>P2Q1</h1>
+  <h1>P1Q3</h1>
   <p> You head out of the house, oblivious to the rest of the world.  As you step out of the door, you see a shooting star! <br><br> 
   It’s your l u c k y day!  <br><br> 
   You’ve never seen a shooting star during the day!  Your brain is OVERLOADED with dopamine.   <br><br> 
@@ -15,10 +15,11 @@
   Your eyes follow their trail.   <br><br> 
   The stars dance in time.  <br><br> 
   In reverberation. <br><br> 
-  A reverberation in 40 Hz.</p>
+  A reverberation in 40 Hz.
   
   The stars continue their 40 Hz twinkle.   <br><br> 
   They’re definitely talking behind your back   <br><br> 
+    
 
 
   </p>
