--- a/P1Q2/P1Q2.html
+++ b/P1Q2/P1Q2.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" type="text/css" href="style.css">
+<link rel="stylesheet" type="text/css" href="../style.css">
 
 <body>
   <h1>P1Q2</h1>
