--- a/P1Q2/P1Q2_lofi.html
+++ b/P1Q2/P1Q2_lofi.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" type="text/css" href="style.css">
+<link rel="stylesheet" type="text/css" href="../style.css">
 
 <body>
   <h1>~Musical Interlude~</h1>
