--- a/P3Q5/P3Q5.html
+++ b/P3Q5/P3Q5.html
@@ -17,6 +17,7 @@
     <a href="https://StoryPortal.github.io/P3Q5/P3Q5A1.html"> You let the butterflies envelop you and take you away in their cloud  </a>
   </p>
   
+<a href="https://StoryPortal.github.io/index.html" class="bottom-right-link">Jump To Start</a>
 
 </div>
 </div>
