--- a/P3Q5/P3Q5A2.html
+++ b/P3Q5/P3Q5A2.html
@@ -19,6 +19,7 @@
     <a href="https://StoryPortal.github.io/index.html">B) The portal is scary. Ask the butterflies to take you the long way home. </a>
   </p>
 
+<a href="https://StoryPortal.github.io/index.html" class="bottom-right-link">Jump To Start</a>
 
 </div>
 </div>
