--- a/P3Q4/P3Q4.html
+++ b/P3Q4/P3Q4.html
@@ -25,6 +25,8 @@
     <p class = "q1">  
     <a href="https://StoryPortal.github.io/P3Q4/P3Q4A3.html">C) Feel your inner dancer emerge, and pull out your best running man  </a>
   </p>
+  
+<a href="https://StoryPortal.github.io/index.html" class="bottom-right-link">Jump To Start</a>
 
 </div>
 </div>
