--- a/P3Q4/P3Q4A1.html
+++ b/P3Q4/P3Q4A1.html
@@ -11,6 +11,7 @@
     <a href="https://StoryPortal.github.io/P3Q4/P3Q4.html">What now?   </a>
   </p>
   
+<a href="https://StoryPortal.github.io/index.html" class="bottom-right-link">Jump To Start</a>
 
 </div>
 </div>
