--- a/P3Q3/P3Q3.html
+++ b/P3Q3/P3Q3.html
@@ -24,6 +24,7 @@
     <a href="https://StoryPortal.github.io/P3Q3/P3Q3A1.html"> you've been through a lot </a>
 
   
+<a href="https://StoryPortal.github.io/index.html" class="bottom-right-link">Jump To Start</a>
 
 </div>
 </div>
