--- a/P3Q3/P3Q3A1.html
+++ b/P3Q3/P3Q3A1.html
@@ -21,6 +21,9 @@
       <audio controls autoplay>
       <source src="../spaceWhaleMessages_mono_02.mp3" type="audio/mpeg">
       </audio>
+
+ <a href="https://StoryPortal.github.io/index.html" class="bottom-right-link">Jump To Start</a>
+
 </div>
 </div>
 </body>
