--- a/P3Q2/P3Q2.html
+++ b/P3Q2/P3Q2.html
@@ -29,6 +29,8 @@
     <p class = "q1">  
     <a href="https://StoryPortal.github.io/P3Q2/P3Q2A3.html">C) Feel your inner dancer emerge, and pull out your best running man.  </a>
   </p>
+  
+<a href="https://StoryPortal.github.io/index.html" class="bottom-right-link">Jump To Start</a>
 
 </div>
 </div>
