--- a/P3Q2/P3Q2A2.html
+++ b/P3Q2/P3Q2A2.html
@@ -11,6 +11,7 @@
     <a href="https://StoryPortal.github.io/P3Q3/P3Q3.html"> Sacrifice?! </a>
   </p>
   
+<a href="https://StoryPortal.github.io/index.html" class="bottom-right-link">Jump To Start</a>
 
 </div>
 </div>
