--- a/P3Q2/P3Q2A3.html
+++ b/P3Q2/P3Q2A3.html
@@ -11,7 +11,9 @@
   <p class = "q1">
     <a href="https://StoryPortal.github.io/P3Q2/P3Q2.html"> What now? </a>
   </p>
-  
+
+<a href="https://StoryPortal.github.io/index.html" class="bottom-right-link">Jump To Start</a>
+
 
 </div>
 </div>
