--- a/P3Q1/P3Q1.html
+++ b/P3Q1/P3Q1.html
@@ -23,6 +23,7 @@
   <p class = "q1">  
     <a href="https://StoryPortal.github.io/P3Q1/P3Q1A2.html">B) Decline!!! Never eat food from strangers! </a>
   </p>
+<a href="https://StoryPortal.github.io/index.html" class="bottom-right-link">Jump To Start</a>
 
 </div>
 </div>
