--- a/P3Q1/P3Q1A1.html
+++ b/P3Q1/P3Q1A1.html
@@ -18,6 +18,7 @@
   <p class = "q1">
     <a href="https://StoryPortal.github.io/P3Q1/P3Q1A1A2.html"> B) Decline. </a>
   </p>
+<a href="https://StoryPortal.github.io/index.html" class="bottom-right-link">Jump To Start</a>
 
 </div>
 </div>
