--- a/P3Q1/P3Q1A1A2.html
+++ b/P3Q1/P3Q1A1A2.html
@@ -19,6 +19,7 @@
       feed you for at least 2 days! You continue flying on in a daze. </a>
   </p>
       
+<a href="https://StoryPortal.github.io/index.html" class="bottom-right-link">Jump To Start</a>
 
 </div>
 </div>
