--- a/P3Q1/P3Q1A2.html
+++ b/P3Q1/P3Q1A2.html
@@ -11,6 +11,7 @@
     <a href="https://StoryPortal.github.io/P3Q4/P3Q4.html"> You continue flying with the witch with all your senses and faculties intact. </a>
   </p>
       
+<a href="https://StoryPortal.github.io/index.html" class="bottom-right-link">Jump To Start</a>
 
 </div>
 </div>
