--- a/P2Q2/P2Q2.html
+++ b/P2Q2/P2Q2.html
@@ -14,6 +14,9 @@
   <p class = "q1">
     <a href="https://StoryPortal.github.io/P2Q2/P2Q2A1.html">A) Scan your surroundings</a>
   </p>
+  
+<a href="https://StoryPortal.github.io/index.html" class="bottom-right-link">Jump To Start</a>
+
 </div>
 </div>
 </body>
