--- a/P2Q2/P2Q2A1.html
+++ b/P2Q2/P2Q2A1.html
@@ -18,6 +18,8 @@
       <source src="../spaceWhaleMessages_mono_04.mp3" type="audio/mpeg">
    
   </p>
+<a href="https://StoryPortal.github.io/index.html" class="bottom-right-link">Jump To Start</a>
+
 </audio>
 </div>
 </div>
