--- a/P2Q2/P2Q2A1A1.html
+++ b/P2Q2/P2Q2A1A1.html
@@ -22,6 +22,8 @@ Its tenor and tone are mysterious to you…<br>
 
   </p>
 </audio>
+<a href="https://StoryPortal.github.io/index.html" class="bottom-right-link">Jump To Start</a>
+
 </div>
 </div>
 </body>
