--- a/P2Q2/P2Q2A1A1A1.html
+++ b/P2Q2/P2Q2A1A1A1.html
@@ -27,6 +27,7 @@
       </audio>
 
   </p>
+<a href="https://StoryPortal.github.io/index.html" class="bottom-right-link">Jump To Start</a>
 
 </div>
 </div>
