--- a/P2Q1/P2Q1.html
+++ b/P2Q1/P2Q1.html
@@ -25,6 +25,9 @@
   <p class = "q1">  
     <a href="https://StoryPortal.github.io/P2Q1/P2Q1A3.html">C) You’ve never been in this situation before so you feel awkward and run back home</a>
   </p>
+
+  <a href="https://StoryPortal.github.io/index.html" class="bottom-right-link">Jump To Start</a>
+
 </div>
 </div>
 </body>
