--- a/P2Q2/P2Q2A1A1A1A1.html
+++ b/P2Q2/P2Q2A1A1A1A1.html
@@ -38,7 +38,7 @@ you gasp
 <div class = "newBlock">
     <div class = "questions">
       <p class = "q1">
-        <a href="https://StoryPortal.github.io/">the end</a><br><br><br>
+        <a href="https://StoryPortal.github.io/theEnd.html">the end</a><br><br><br>
         <audio controls autoplay>
           <source src="../spaceWhaleMessages_mono.mp3" type="audio/mpeg">
         
