--- a/P2Q2/P2Q2A1A1A1.html
+++ b/P2Q2/P2Q2A1A1A1.html
@@ -9,10 +9,14 @@
     coolPortal.png<br> 
     
     The energy of the song draws you in.<br>
-    You feel a strong need<br>
-     nay<br>
-    a LUST <br>
-    for the portal and the music within.
+    The purple hue of the portal scintillates, delighting your eyes and enchanting your brain<br>
+    Would it be so wrong<br>
+    <br>
+    <br>
+    to listen to the song
+    <br>
+    <br>
+    in a purple world
   </p>
 <div class = "newBlock">
 <div class = "questions">
