audio small test

--- a/P2Q2/P2Q2A1A1A1.html
+++ b/P2Q2/P2Q2A1A1A1.html
@@ -29,7 +29,10 @@
     <audio controls autoplay>
       <source src="../spaceWhaleMessages_mono_03.mp3" type="audio/mpeg">
       </audio>
-
+      <script>
+        var audio = document.getElementById("myaudio");
+        audio.volume = 0.2;
+      </script>
   </p>
 <a href="https://StoryPortal.github.io/index.html" class="bottom-right-link">Jump To Start</a>
 
