--- a/P2Q2/P2Q2A1A1A1.html
+++ b/P2Q2/P2Q2A1A1A1.html
@@ -26,7 +26,7 @@
   <p class = "q1">
     <a href="https://StoryPortal.github.io">B)The portal is very scary, and you have bad taste in music.  Tell the butterflies to take you home :(</a><br><br><br><br><br><br><br>
 
-    <audio controls autoplay>
+    <audio controls autoplay id="myaudio">
       <source src="../spaceWhaleMessages_mono_03.mp3" type="audio/mpeg">
       </audio>
       <script>
