--- a/P2Q2/P2Q2A1A1.html
+++ b/P2Q2/P2Q2A1A1.html
@@ -16,12 +16,16 @@ Its tenor and tone are mysterious to you…<br>
 <div class = "questions">
   <p class = "q1">
     <a href="https://StoryPortal.github.io/P2Q2/P2Q2A1A1A1.html">A) Ask the butterflies to take you closer</a><br><br><br><br><br><br><br>
-    <audio controls autoplay>
+    <audio controls autoplay id = "myaudio">
       <source src="../spaceWhaleMessages_mono_02.mp3" type="audio/mpeg">
-    
+    </audio>
+      <script>
+        var audio = document.getElementById("myaudio");
+        audio.volume = 0.2;
+      </script>
 
   </p>
-</audio>
+
 <a href="https://StoryPortal.github.io/index.html" class="bottom-right-link">Jump To Start</a>
 
 </div>
