--- a/theEnd.html
+++ b/theEnd.html
@@ -1,3 +1,5 @@
+<link rel="stylesheet" type="text/css" href="style.css">
+
 <html>
 
 <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScrgTQ3_e97l1mPji4DxJhDz8mM879hRO4cYnbEyJcl5rn-mQ/viewform?embedded=true" width="640" height="495" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
@@ -6,3 +8,5 @@
 <audio controls autoplay>
     <source src="../spaceWhaleMessages_mono.mp3" type="audio/mpeg">
 </audio>
+
+<a href="https://StoryPortal.github.io/index.html" class="bottom-right-link">Jump To Start</a>
