--- a/desktopTest/desktop_dev.html
+++ b/desktopTest/desktop_dev.html
@@ -57,6 +57,6 @@
     </script>
 
     <!-- Load your React code -->
-    <script type="text/babel" src="desktop_dev.js"></script>
+    <script type="text/babel" src="desktop.js"></script>
 </body>
 </html>
