--- a/desktopTest/desktop_dev.html
+++ b/desktopTest/desktop_dev.html
@@ -27,7 +27,7 @@
 <body>
     <div id="root"></div>
 
-    <!-- Your React code (assuming it's saved as desktop.js) -->
-    <script src="desktop_dev.js"></script>
+    <!-- Your React code -->
+    <script src="desktop.js"></script>
 </body>
 </html>
