--- a/desktopTest/desktop_dev.html
+++ b/desktopTest/desktop_dev.html
@@ -28,6 +28,6 @@
     <div id="root"></div>
 
     <!-- Your React code -->
-    <script src="desktop.js"></script>
+    <script src="desktop_dev.js"></script>
 </body>
 </html>
